force-app/main/default/objects/SPEN_PhysicalInformation__c/SPEN_PhysicalInformation__c.object-meta.xml
<CustomObject>
    <description>This custom object is for connections process.</description>
    <label>Physical Information</label>
    <nameField>
        <displayFormat>PHYI-{00000}</displayFormat>
        <label>Physical Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Physical Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>