force-app/main/default/objects/SPEN_PhysicalInformation__c/fields/SPEN_CaseTransferredDateTimeInSAP__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CaseTransferredDateTimeInSAP__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <formula>SPEN_Case__r.SPEN_CaseTransferredDateTimeInSAP__c</formula>
    <label>Made Competent</label>
    <type>DateTime</type>
</CustomField>