force-app/main/default/objects/SPEN_PhysicalInformation__c/fields/SPEN_ItemClass__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ItemClass__c</fullName>
    <label>Item Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IT-UITEM</fullName>
                <label>Physical information</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>