force-app/main/default/objects/SPEN_PhysicalInformation__c/fields/SPEN_ItemID__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ItemID__c</fullName>
    <externalId>true</externalId>
    <label>Item ID</label>
    <length>12</length>
    <type>Text</type>
</CustomField>