force-app/main/default/objects/SPEN_PhysicalInformation__c/fields/SPEN_ItemProfile__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ItemProfile__c</fullName>
    <description>CRMD-5996 Connection Process</description>
    <label>Item Profile</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UIT00001</fullName>
                <label>Site layout plan</label>
            </value>
            <value>
                <fullName>UIT00002</fullName>
                <label>Billing address</label>
            </value>
            <value>
                <fullName>UIT00003</fullName>
                <label>Relocation drawing</label>
            </value>
            <value>
                <fullName>UIT00004</fullName>
                <label>Internal layout floor plans (flats only)</label>
            </value>
            <value>
                <fullName>UIT00005</fullName>
                <label>Load details</label>
            </value>
            <value>
                <fullName>UIT00006</fullName>
                <label>Unmetered information</label>
            </value>
            <value>
                <fullName>UIT00007</fullName>
                <label>Location plan</label>
            </value>
            <value>
                <fullName>UIT00008</fullName>
                <label>Meter Point Administration Number (MPAN)</label>
            </value>
            <value>
                <fullName>UIT00009</fullName>
                <label>Site address</label>
            </value>
            <value>
                <fullName>UIT00010</fullName>
                <label>Telephone number</label>
            </value>
            <value>
                <fullName>UIT00011</fullName>
                <label>Photograph(s)</label>
            </value>
            <value>
                <fullName>UIT00012</fullName>
                <label>Embedded generation information</label>
            </value>
            <value>
                <fullName>UIT000012</fullName>
                <isActive>false</isActive>
                <label>Embedded generation information1</label>
            </value>
            <value>
                <fullName>UIT000011</fullName>
                <isActive>false</isActive>
                <label>Photograph(s)1</label>
            </value>
            <value>
                <fullName>UIT000010</fullName>
                <isActive>false</isActive>
                <label>Telephone number1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>