force-app/main/default/objects/SPEN_PhysicalInformation__c/fields/SPEN_ItemReceivedOn__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ItemReceivedOn__c</fullName>
    <description>CRMD-5996 Connection process</description>
    <label>Item Received On</label>
    <type>DateTime</type>
</CustomField>