force-app/main/default/objects/SPEN_PhysicalInformation__c/fields/SPEN_ItemReceivedRemark__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ItemReceivedRemark__c</fullName>
    <description>CRMD-5996 Connection Process</description>
    <label>Item Received Remark</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>