force-app/main/default/objects/SPEN_PhysicalInformation__c/fields/SPEN_ItemRequestedDate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ItemRequestedDate__c</fullName>
    <description>CRMD-5996 Connection Process</description>
    <label>Item Requested Date</label>
    <type>DateTime</type>
</CustomField>