force-app/main/default/objects/SPEN_PhysicalInformation__c/fields/SPEN_ItemRequestRemark__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ItemRequestRemark__c</fullName>
    <description>CRMD-5996 Connection Process</description>
    <label>Item Request Remark</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>