force-app/main/default/objects/SPEN_PhysicalInformation__c/fields/Sync_Sap_Status__c.field-meta.xml
<CustomField>
    <fullName>Sync_Sap_Status__c</fullName>
    <label>Sync Sap Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>