force-app/main/default/objects/SPEN_PhysicalInformation__c/validationRules/SPEN_ItemIdMandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>SPEN_ItemIdMandatory</fullName>
    <active>true</active>
    <description>Item Id is mandatory if you need to put Item Received On and Item Received Remark value</description>
    <errorConditionFormula>OR( (AND( ISCHANGED( SPEN_ItemReceivedRemark__c), SPEN_ItemID__c = Null)), (AND( ISNEW(),
!ISBLANK(SPEN_ItemReceivedRemark__c),SPEN_ItemID__c = Null)))</errorConditionFormula>
    <errorDisplayField>SPEN_ItemID__c</errorDisplayField>
    <errorMessage>Please sync the record to SAP in order to get Item Id before putting values for Item Received On and Item Received Remark</errorMessage>
</ValidationRule>