force-app/main/default/objects/SPEN_PhysicalInformation__c/validationRules/SPEN_PreventFutureDate.validationRule-meta.xml
<ValidationRule>
    <fullName>SPEN_PreventFutureDate</fullName>
    <active>true</active>
    <description>CRMD-5996 Connection process</description>
    <errorConditionFormula>OR(
AND(NOT ISBLANK( SPEN_ItemReceivedOn__c), SPEN_ItemReceivedOn__c &gt; NOW()),
AND(NOT ISBLANK( SPEN_ItemRequestedDate__c), SPEN_ItemRequestedDate__c &gt; NOW())
)</errorConditionFormula>
    <errorMessage>Item requested date or Item received date cannot be future date and time</errorMessage>
</ValidationRule>