force-app/main/default/objects/SPEN_PhysicalInformation__c/validationRules/SPEN_RequestedRemarkMand.validationRule-meta.xml
<ValidationRule>
    <fullName>SPEN_RequestedRemarkMand</fullName>
    <active>true</active>
    <description>CRMD-5996 Connection process</description>
    <errorConditionFormula>AND(NOT(ISBLANK( SPEN_ItemReceivedOn__c )), ISBLANK(SPEN_ItemReceivedRemark__c) )</errorConditionFormula>
    <errorDisplayField>SPEN_ItemReceivedRemark__c</errorDisplayField>
    <errorMessage>Please fill up Item Received Remark</errorMessage>
</ValidationRule>